--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "backend-daythree",
   "version": "1.0.0",
   "description": "let's explore myself",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "dev":"nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "abhijeet",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
