--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon  -r dotenv/config --experimantal-json-module  src/index.js"
+    "dev":"nodemon -r dotenv/config  --experimantal-json-modules  src/index.js"
   },
   "keywords": [
     "javascript",
@@ -18,10 +18,14 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookies-parser": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
